# litdata-viewer

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.github/workflows/: auto-tag.yml  build-tauri.yml
app/: globals.css  layout.tsx  page.tsx
components/: providers.tsx
components/ui/: button.tsx  scroll-area.tsx
lib/: query-client.ts  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/App.icon/: icon.json
src-tauri/src/: litdata.rs
store/: viewer.ts
