[package]
name = "litdata-viewer"
version = "0.3.0"
description = "Tauri + Next.js LitData Viewer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["wry"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
open = "5"
infer = "0.19"
hex = "0.4"
zstd = { version = "0.13", default-features = false, features = ["experimental", "thin"] }
